# grid-cli

./: .gitignore  .grid  LICENSE  README.md  USAGE.md  build_exe.bat  build_exe.sh  install.bat  messy.py  pyproject.toml  requirements.txt  setup.iss  setup.py
.github/workflows/: build.yml
grid/: main.py
grid-brain/: index.html  requirements.txt  vercel.json
grid-brain/api/: index.py
grid-brain/public/: index.html  install.sh
grid/assets/: sass_seed.json
grid/commands/: auth.py  blame.py  branch.py  cloud_sync.py  dev.py  docker.py  home.py  init.py  purge.py  push.py  rank.py  recap.py  roast.py  status.py  submit.py  tree.py  update.py
grid/core/: analyzer.py  broadcaster.py  cloud.py  config.py  discovery.py  executor.py  firewall.py  git_police.py  personality.py  scraper.py  shell.py  style.py  utils.py
grid/data/: rules.json
grid/shell/: boot.py  handlers.py  handlers_logic.py  help.py  loop.py  prompt.py
grid/utils/: git.py  ui.py  venv.py
tests/: __init__.py  test_config.py
